--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </ul>
 
             <ul>
-                <li><a href=""><img src="./images/envelope(hover).svg" alt="mail" /> info@devstufio.com</a></li>
+                <li><a href=""><img src="./images/envelope.svg" alt="mail" /> info@devstufio.com</a></li>
                 <li><a href=""><img src="./images/smartphone.svg" alt="mobile" /> +38 096 111 11 11</a></li>
             </ul>
         </nav>
@@ -32,7 +32,7 @@
         </section>
         <section>
             <h2>Преимущества</h2>
-            <ui>
+            <ul>
                 <li>
                     <a href=""><img src="./images/antenna.svg" alt="antenna" /> </a>
                     <h3>Внимание к деталям</h3>
@@ -53,7 +53,7 @@
                     <h3>Современные технологии</h3>
                     <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
-            </ui>
+            </ul>
         </section>
         <section>
             <h2>Чем мы занимаемся</h2>
